@@ -31,7 +31,7 @@ window.open('[%url(token) _ '&view=helptext-html'%]','helpwindow',
 <STYLE type="text/css" media="all">
   @import url( [% plainURL _ style('stylesheet') %] );
   [% cssoverlay = style('cssoverlay'); IF cssoverlay; %]
-  @import url( [% plainURL _ cssoverlay %] );
+  @import url( [% cssoverlay %] );
   [% END %]
 </STYLE>
 </HEAD>
